<resources>
    <string name="app_name">SIESGSTarena</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="problemset_shortcut_short_label">Problem set</string>
    <string name="problemset_shortcut_long_label">Problems from past contests</string>
    <string name="problemset_shortcut_disabled">Shortcut is disabled!</string>
    <string name="blogs_shortcut_short_label">Blogs</string>
    <string name="blogs_shortcut_long_label">Blogs and Editorials</string>
    <string name="blogs_shortcut_disabled">Shortcut is disabled!</string>
    <string name="blogs_posted_on">Posted on : %1$s</string>
    <string name="blogs_recent_activity">Recent Activity: %1$s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="contests_widget_empty_string">No contests found! \n Check internet</string>
    <string name="contests_channel_name">Upcoming Contests</string>
    <string name="contests_channel_id">contests_channel</string>
    <string name="apps_ac_stats_title">AC Statistics</string>
    <string name="apps_ac_stats_desc">Want to see some crazy statistics? Come Inside!</string>
    <string name="apps_ac_stats_author">By Omkar Prabhu</string>
    <string name="apps_comparator_title">Comparator</string>
    <string name="apps_comparator_desc">Want to see the real competition? Try this!</string>
    <string name="apps_comparator_author">By Omkar Prabhu</string>
    <string name="apps_appeal">Have an app idea suitable for SIESGSTarena? Send us an idea or a small POC and we\'ll build that with you! Send us an email</string>
    <string name="stats_title">Programmers with most AC submissions in respective languages</string>
    <string name="stats_submission_caption">AC Submissions: </string>
    <string name="stats_language">Language: </string>
    <string name="compare_headline">Get your records clear before challenging anyone!</string>
    <string name="compare_result">%1$s Won!</string>
    <string name="compare_accepted">ACCEPTED</string>
    <string name="compare_compilation_error">COMPILATION ERROR</string>
    <string name="compare_runtime_error">RUNTIME ERROR</string>
    <string name="compare_timelimit_exceeded">TIMELIMIT EXCEEDED</string>
    <string name="compare_empty_initial_text">Enter the usernames that you want to compare</string>
</resources>
