<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".apps.ui.AppsFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/apps_ac_stats_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ac_stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_ac_stats_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/ac_stats_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_ac_stats_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ac_stats_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_ac_stats_author"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/apps_comparator_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/apps_ac_stats_card"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            >
            <TextView
                android:id="@+id/comparator_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps_comparator_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />
            <TextView
                android:id="@+id/comparator_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps_comparator_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />
            <TextView
                android:id="@+id/comparator_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps_comparator_author"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/apps_bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apps_appeal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="8dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>